--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <p>This is the Admin creating an index.html file for Tom and Jerry, it's a praject for starter</p>
     <p>The startup of project will help up coming Devops Engineer know the basic of git command.</p>
+    <nav>This is Tom adding Navigation to the AI-website, he added this information to make changes.</nav>
 </body>
 </html>
