Update navigation bar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>This is Tom adding Navigation to the AI-website, he added this information to make changes.</nav>
     <p>This is the Admin creating an index.html file for Tom and Jerry, it's a praject for starter</p>
     <p>The startup of project will help up coming Devops Engineer know the basic of git command.</p>
     <nav>This is Tom adding Navigation to the AI-website, he added this information to make changes.</nav>
