Resolved conflict in index.html by merging footer and avoiding nav duplication

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>This is the Admin creating an index.html file for Tom and Jerry, it's a praject for starter</p>
-    <p>The startup of project will help up coming Devops Engineer know the basic of git command.</p>
+    <nav>This is Tom adding Navigation to the AI-website, he added this information to make changes.</nav>
+    <p>This is the Admin creating an index.html file for Tom and Jerry, it's a project for starter</p>
+    <p>The startup of project will help upcoming DevOps Engineers know the basics of git commands.</p>
     <footer>Jerry contact info: 08727501873</footer>
 </body>
 </html>
